# GitOps-AI-Sentinel

./: README.md  company_rules.txt  docker-compose.yml  ingest.py  main.py  pyproject.toml  test.py
